[project]
name = "py313ml"
version = "0.1.0"
description = "Environment for the UPNA's Master's degree in Machine Learning"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "category-encoders>=2.8.1",
    "dtreeviz>=2.2.2",
    "eli5>=0.16.0",
    "imageio>=2.37.0",
    "imbalanced-learn>=0.14.0",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "lightning>=2.5.5",
    "matplotlib>=3.10.6",
    "nbconvert>=7.16.6",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "pip>=25.3",
    "pyarrow>=21.0.0",
    "pydotplus>=2.0.2",
    "pyspark>=4.0.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "spacey>=0.1.1",
    "spacy>=3.8.7",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchtext>=0.6.0",
    "torchvision>=0.23.0",
    "ttach>=0.0.3",
    "xgboost>=3.0.5",
]

